--- a/package.json
+++ b/package.json
@@ -42,5 +42,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "file": "^0.2.2",
+    "loader": "^2.1.1"
   }
 }
